Transfering content from other papers

--- a/Thesis.cls
+++ b/Thesis.cls
@@ -68,7 +68,7 @@
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{2.0ex plus0.5ex minus0.2ex}
 \usepackage{vmargin}
-\usepackage[rgb]{xcolor}
+\usepackage[table,rgb]{xcolor}
 \definecolor{OrangeGSSI}{RGB}{237,113,45}
 \definecolor{blue}{RGB}{25,25,112}
 %----------------------------------------------------------------------------------------
@@ -298,7 +298,7 @@
   \cleardoublepage
 }
 \addtocounter{secnumdepth}{1}
-\setcounter{tocdepth}{6}
+\setcounter{tocdepth}{3}
 \newcounter{dummy}
 \newcommand\addtotoc[1]{
 \refstepcounter{dummy}
