--- a/thesis.tex
+++ b/thesis.tex
@@ -89,6 +89,9 @@
 \newcommand{\ttff}{TTFF\xspace}
 \newcommand{\pttff}{TTFF\xspace}
 
+\newcommand{\quoter}[2]{``\textit{#1}'' (#2)}
+\newcommand{\quotes}[1]{``\textit{#1}''}
+
 % Circles
 \usepackage{tikz}
 \newcommand*\emptycirc[1][1ex]{%
@@ -129,6 +132,8 @@
 
 % \pagestyle{fancy} % Finally, use the "fancy" page style to implement the FancyHdr headers
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % New command to make the lines in the title page
+
+
 
 % PDF meta-data
 \hypersetup{pdftitle={\ttitle}}
