--- a/thesis.tex
+++ b/thesis.tex
@@ -292,12 +292,12 @@ The acknowledgements and the people to thank go here, don't forget to include yo
 %%----------------------------------------------------------------------------------------
 %%	ABBREVIATIONS
 %%----------------------------------------------------------------------------------------
-%\clearpage % Start a new page
-%\setstretch{1.5} % Set the line spacing to 1.5, this makes the following tables easier to read
-%\lhead{\emph{Abbreviations}} % Set the left side page header to "Abbreviations"
-%\listofsymbols{ll} % Include a list of Abbreviations (a table of two columns)
-%{
-%\textbf{AMI} & \textbf{A}dvanced \textbf{M}etering \textbf{I}nfrastructure \\
+\clearpage % Start a new page
+\setstretch{1.5} % Set the line spacing to 1.5, this makes the following tables easier to read
+\lhead{\emph{Abbreviations}} % Set the left side page header to "Abbreviations"
+\listofsymbols{ll} % Include a list of Abbreviations (a table of two columns)
+{
+\textbf{AMI} & \textbf{A}dvanced \textbf{M}etering \textbf{I}nfrastructure \\
 %\textbf{CPS} & \textbf{C}yber-\textbf{P}hysical \textbf{S}ystems \\
 %\textbf{DoS} & \textbf{D}enial-\textbf{o}f-\textbf{S}ervice \\
 %\textbf{MAC} & \textbf{M}edium \textbf{A}ccess {C}ontrol \\
@@ -316,8 +316,16 @@ The acknowledgements and the people to thank go here, don't forget to include yo
 %\textbf{SLR} & \textbf{S}ystematic \textbf{L}iterature \textbf{R}eview \\
 %\textbf{SMC} & \textbf{S}tatistical \textbf{M}odel \textbf{C}hecking \\
 %\textbf{VCSE} & \textbf{V}irtual \textbf{C}ontrol \textbf{S}ystem \textbf{E}nvironment \\
-%%\textbf{Acronym} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or \\
-%}
+%\textbf{Acronym} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or \\
+}
+
+\clearpage % Start a new page
+\setstretch{1.5} % Set the line spacing to 1.5, this makes the following tables easier to read
+\lhead{\emph{Glossary}} % Set the left side page header to "Abbreviations"
+\listofglossary{ll} % Include a list of Abbreviations (a table of two columns)
+{
+\textbf{Tool} & Something Something \\
+}
 
 %----------------------------------------------------------------------------------------
 %	PHYSICAL CONSTANTS/OTHER DEFINITIONS
