Full draft of chapter 5 + acknowledgements

--- a/appendices/b.surveys.tex
+++ b/appendices/b.surveys.tex
@@ -4,4 +4,58 @@
 \chapter{Surveys}\label{app:surveys}
 \lhead{\emph{Appendix B}} % Set the left side page header to "Introduction"
 
-\todo{Write your Appendix content here, if needed.}
+%\todo{Write your Appendix content here, if needed.}
+
+\section{Questions for Practitioners at Ericsson}
+
+\begin{table}[]
+\centering
+%\scriptsize
+\rowcolors{1}{}{gray!10}
+%\setlength{\tabcolsep}{6pt}
+\begin{tabular}{p{0.05\linewidth}p{0.9\linewidth}}
+\toprule
+\textbf{Nº} & \textbf{Question} \\
+\midrule
+\textbf{1} & \textbf{Roles \& education} \\
+\textbf{1.1} & What is your role at Ericsson and what are the main ways you interact with the regression testing suite? \\
+\textbf{1.2} & What is your education in testing? \\
+\midrule
+\textbf{2} & \textbf{Are these common pain points?} \\
+\textbf{2.1} & Correctly detecting failures (avoiding slips) \\
+\textbf{2.2} & Flaky (unreliable tests) \\
+\textbf{2.3} & Running time of the test suite \\
+\textbf{2.4} & Creating or updating tests (increasing test scope) \\
+\textbf{2.5} & Cleaning up obsolete tests (reducing test scope) \\
+\midrule
+\textbf{3} & \textbf{Current practices} \\
+\textbf{3.1} & Are you familiar with these terms? Do you use them? \\
+\textbf{3.1.1} & Test Case Selection \\
+\textbf{3.1.2} & Test Case Prioritization \\
+\textbf{3.1.3} & Test Suite Reduction \\
+\textbf{3.1.4} & Test Suite Augmentation \\
+\textbf{3.2} & Does your team separate test execution into shorter, frequent runs and longer overnight runs? \\
+\textbf{3.3} & Are there people in your team solely responsible for testing, or is it a job of the developer? \\
+\textbf{3.4} & Do you believe the current test suite is effective in avoiding fault propagation upon delivery of an update? \\
+\textbf{3.5} & How often are there failing tests from the overnight run in the morning? \\
+\textbf{3.6} & How often is a test failure a sign of actual SUT error vs. poor test quality vs. environment misconfiguration? \\
+\textbf{3.7} & What do you do when the same test fails many days in a row? \\
+\textbf{3.8} & What is the standard procedure for dealing with potentially flaky tests? \\
+\textbf{3.9} & Is there a policy in place for refactoring and/or removing aging tests? \\
+\textbf{3.10} & Do you have an idea of how much money or how much electricity is needed to run a test suite? Is this concern increasing or reducing over the years? \\
+\textbf{3.11} & Do you personally ever review test code? How much trust do you have that it's being done correctly and at high quality? \\
+\midrule
+\textbf{4} & \textbf{Interaction with academia} \\
+\textbf{4.1} & Do you stay informed about recent research in Software Engineering? \\
+\textbf{4.2} & Has a piece of Software Engineering research directly improved your workflow? \\
+\textbf{4.3} & Do you keep contact with a friend or colleague doing research in Software Engineering? \\
+\textbf{4.4} & Before me, have there been attempts of collaboration between members of your team and academic researchers? \\
+\textbf{4.5} & What does a tool need to do/have in order to convince you to use it as a permanent part of your workflow? \\
+\textbf{4.6} & What are the risks and benefits of using a new tool for regression testing improvement? \\
+\textbf{4.7} & Have you ever used an open-source regression testing approach as-is, or is it always necessary to re-engineer it for usability/security/compatibility reasons? \\
+\textbf{4.8} & If I came to you saying ``I have this algorithm that would help your testing workflow'', what would be your reaction? \\
+\bottomrule
+\end{tabular}\\
+\caption{Interviewees at Ericsson.}
+\label{table:interviewees}
+\end{table}
