--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1995,3 +1995,20 @@ Conclusion: Test case prioritization has already been considerably discussed in 
 	year = {2022},
 	bdsk-url-1 = {https://ieeexplore.ieee.org/document/9394799/},
 	bdsk-url-2 = {https://doi.org/10.1109/TSE.2021.3070549}}
+
+@article{yoo2012regression,
+  title={Regression testing minimization, selection and prioritization: a survey},
+  author={Yoo, Shin and Harman, Mark},
+  journal={Software testing, verification and reliability},
+  volume={22},
+  number={2},
+  pages={67--120},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@misc{dictionary_eff,
+	title={“Effectiveness” vs. “Efficacy” vs. “Efficiency”: When To Use Each Word For The Best Results},
+	author={Dictionary.com},
+	url={https://www.dictionary.com/e/effectiveness-vs-efficacy-vs-efficiency-when-to-use-each-word-for-the-best-results/}
+}
