--- a/thesis.tex
+++ b/thesis.tex
@@ -72,6 +72,7 @@
 \newcommand{\tsa}{TSA\xspace}
 \newcommand{\rt}{RT\xspace}
 \newcommand{\rea}{IR\&A\xspace}
+\newcommand{\sut}{SUT\xspace}
 
 
 \newcommand{\ek}{Ekstazi\xspace}
@@ -276,8 +277,8 @@ In order to help bring academia and industry closer together, we also propose th
 I am incredibly grateful for the guidance and orientation provided by my advisors, professors Antonia Bertolino, Breno Miranda and Ludovico Iovino.
 I would also like to thank GSSI professors Luca Aceto and Michele Flammini, who have been supportive in times of need since my early days at the institute.
 
-I thank Sigrid Eldh, Carene Österberg and Tommie Haag, from Ericsson, who gave me the opportunity of interacting with them and their team in Sweden.
-Without them, there would be no \autoref{chap:industry} in this thesis.
+Thanks to Milos Gligoric, who provided significant contributions to the discussions and results presented in \autoref{chap:orchestration}.
+I also thank Sigrid Eldh, Carene Österberg and Tommie Haag, from Ericsson, who gave me the opportunity of interacting with them and their team in Sweden and without whom there would be no \autoref{chap:industry} in this thesis.
 
 Thanks to my parents, Lizmari and Edison Greca, and my grandparents, Glacial and Aquiles Merlin, who gave me the foundational values and education that have guided me through life until this point.
 Additionally, I would like to remember my grandparents Berenice and Eros Greca, who I wish could be here to share their part in this achievement, and my uncles Felipe and Chico, who encouraged me to explore the world.
